--- a/singlepage/stylesheet/base.css
+++ b/singlepage/stylesheet/base.css
@@ -31,6 +31,14 @@ div, p, span, a, input, img,textarea,ul,li{margin:0; padding:0; border:none; out
 
 .clearfix:after{content:"";display:block;height:0;clear:both;visibility:hidden}
 [v-cloak] { display: none !important;}
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Chrome/Safari/Opera */
+  -khtml-user-select: none; /* Konqueror */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none;
+}
 
 .html{ position: relative; height: 100%; width: 100%; }
 
@@ -41,6 +49,23 @@ div, p, span, a, input, img,textarea,ul,li{margin:0; padding:0; border:none; out
 .alic{ text-align: center;}
 .alir{ text-align: right;}
 .ovh{ overflow: hidden;}
+
+.tippop{ position: fixed; z-index: 99; left: 0; top: 50%;transform:translateY(-50%); -webkit-transform:translateY(-50%); font-size: 12px; text-align: center; width: 100%; padding: 0 30px;}
+.tippop .text{ padding:10px 20px; display: block; width: 100%; font-size: 16px; border-radius: 4px; }
+.tippop .danger{ background: #f2dede; color: #a94442;}
+.tippop .success{ background: #dff0d8;color: #3c763d;}
+.tippop .info{ background: #d9edf7;color: #31708f;}
+.tippop .warning{ background: #fcf8e3;color: #8a6d3b;}
+.tippop .tip{ background: rgba(0,0,0,.8);color: #fff;}
+
+.tippop_bg{position: fixed; left: 0; top: 0; height: 100%; width: 100%; background: rgba(0,0,0,.6); z-index: 98;}
+.tippop_alert{ position: fixed; z-index: 99; left: 50%; top: 50%;transform:translate(-50%,-50%); -webkit-transform:translate(-50%,-50%); padding: 20px; background: #fff; min-width: 80%; width: 70%; border-radius: 3px; overflow: hidden;}
+.tippop_alert_t{ min-height: 60px; background: #fff; font-size: 16px; color: #666; line-height: 24px;}
+.tippop_alert_b{ display: block; line-height: 36px; font-size: 12px; color: #333; padding-top: 20px; text-align: right }
+.tippop_confirm_btn{ display: inline-block; height: 36px; line-height: 36px; color: #3da8f5; font-size: 18px;}
+.tippop_confirm_btn:nth-child(1){ color: #999; margin-right: 40px;}
+.cues-coverload{ position: fixed; left: 0; top: 0; z-index: 99; height: 100%; width: 100%; background: #fff;}
+.cues-clico{ position: absolute; left: 50%; top: 50%; width: 16px; margin: -8px 0 0 -8px;}
 
 
 .toptype{ height: 174px; background: url(../images/bg02.jpg); background-size: 100% 100%; }
@@ -92,7 +117,7 @@ div, p, span, a, input, img,textarea,ul,li{margin:0; padding:0; border:none; out
 .cont-right .uptime{ font-size: 12px; color: #333; }
 .cont-right .uptime-ls{ margin-left: 20px; }
 
-.fwbtab{ overflow: hidden; padding: 16px 40px 40px; }
+.fwbtab{ overflow: hidden; padding: 16px 40px 80px; }
 .fwbtab .tab-cont{ float: right; overflow: hidden; border-radius: 5px;background: #e3077e; line-height: 38px; font-weight: bold; }
 .fwbtab .tab{ float: right; display: block; float: left; padding: 0 20px; color: #fff; }
 .fwbtab .tab-active{ background: #aa1465; }
@@ -119,27 +144,64 @@ div, p, span, a, input, img,textarea,ul,li{margin:0; padding:0; border:none; out
 .xiangx .cr-te{ position: absolute; left: 50%; top: -30px; width: 160px; margin-left: -80%; font-size: 16px; font-weight: bold; }
 .xiangx .cr-te-d{ top: auto; bottom: -30px; }
 .xiangx .cr-num{ position: absolute; top: 50%; left: 0; width: 100%; color: #fff; font-weight: bold; color: #fff; font-size: 20px; -webkit-transform: translate(0,-50%); -moz-transform: translate(0,-50%); -o-transform: translate(0,-50%); -ms-transform: translate(0,-50%); transform: translate(0,-50%);  }
-.xiangx .xxxx{}
-.xiangx .xxxx{}
-.xiangx .xxxx{}
-.xiangx .xxxx{}
-.xiangx .xxxx{}
-.xiangx .xxxx{}
-.xiangx .xxxx{}
-.xiangx .xxxx{}
-.xiangx .xxxx{}
-.xiangx .xxxx{}
-.cont-right .xxxx{}
-.cont-right .xxxx{}
-.cont-right .xxxx{}
-.cont-right .xxxx{}
-.cont-right .xxxx{}
-.cont-right .xxxx{}
-.cont-right .xxxx{}
-.cont-right .xxxx{}
-.cont-right .xxxx{}
-.cont-right .xxxx{}
-.cont-right .xxxx{}
-.cont-right .xxxx{}
-.cont-right .xxxx{}
+
+.pop{ position: fixed; height: 0; overflow: hidden; top: 0; left: 0; height: 0; width: 100%; z-index: 5; background: rgba(0,0,0,.5); }
+.pop .pop-cont{ position: absolute; left: 50%; top: 0; width: 1080px; height: 100%; margin-left: -540px; background: #fff; box-shadow: 0 0 10px rgba(0,0,0,.2); overflow-y: scroll;  -webkit-overflow-scrolling:touch;}
+.pop-active{ height: 100%; }
+.pop-setting .toptil{ height: 60px; background: #f4f2f0; border-bottom: 1px solid #d6d2d2; padding-left: 30px; }
+.pop-setting .toptil-in{ float: left; height: 60px; border-bottom: 3px solid #e3077e; line-height: 60px; font-size: 16px; color: #e3077e; font-weight: bold; }
+.pop-setting .rangetype{ padding: 40px 0 24px 30px; overflow: hidden; }
+.pop-setting .col{ float: left; width: 204px; }
+.pop-setting .cola{ font-weight: bold; }
+.pop-setting .colb{ padding-left: 30px; }
+.pop-setting .rt-box{ overflow: hidden; }
+.pop-setting .rt-ls{ position: relative; display: block; float: left; margin-right: 90px; padding-left: 23px; color: #333; }
+.pop-setting .rt-ls:after{ content: ""; position: absolute; left: 0; top: 50%; margin-top: -8px; height: 16px; width: 16px;  background: url(../images/icon_rad.png) no-repeat left bottom; }
+.pop-setting .rt-ls-active:after{ background-position: left top; }
+.pop-setting .rangewarp{ padding-left: 30px; line-height: 30px; }
+.pop-setting .rw-ls{padding-bottom: 20px;}
+.pop-setting .rw-input{ position: relative; float: left; white-space: nowrap; }
+.pop-setting .rw-ctrol{ display: inline-block; height: 30px; width: 180px; margin-right: 10px; border:1px solid #eee; padding-left: 10px; color: #333; font-size: 15px; }
+.pop-setting .rw-ctrola{ background:url(../images/icon_date.png) no-repeat 150px center; }
+.pop-setting .ltil{ padding: 0 0 10px 30px; font-size: 16px; font-weight: bold; }
+.pop-setting .ltil-in{ font-size: 14px; font-weight: normal; color: #999; }
+.pop-setting .rw-cdata{ position: absolute; left: 0; top: 0; width: 100%; height: 100%; display: block; opacity: 0; }
+.pop-setting .sbarbox{ padding:0 30px; }
+.pop-setting .sbar-item{ margin-bottom: 20px; }
+.pop-setting .sbar-til{ font-weight: bold; padding-bottom: 10px; }
+.pop-setting .sbar-cont{ position: relative; }
+.pop-setting .sbar-bg{position: absolute; left: 0; top:80px; height: 3px; width: 100%; background: #e5d8df}
+.pop-setting .sbar-lses{ padding: 0 40px; height: 120px; }
+.pop-setting .sbar-ls{ position: relative; float: left; height: 120px; }
+.pop-setting .sbar-ls-move{ position: absolute; right: -17px; top: 67px; z-index: 8; height: 34px; width: 34px; cursor: pointer; background: url(../images/icon_po.png) no-repeat center center; }
+.pop-setting .sbar-ls-hr{ position: absolute; left: 0; top:80px; height: 3px; width: 100%; background: #e5d8df; }
+.pop-setting .sbar-tip{ position: absolute; left: 50%; top: 0; height: 78px; width: 134px; margin-left: -67px; padding: 12px 10px 0; background: url(../images/icon_mo.png) no-repeat left top; }
+.pop-setting .sbar-ls-del{ position: absolute; right: 0; top: 0; height: 24px; width: 24px; background: url(../images/icon_rem.png) no-repeat center center; }
+.pop-setting .sbar-ls-ctrol{ display: block; background: no-repeat; height: 22px; font-size: 14px; text-align: center; width: 100%; }
+.pop-setting .sbar-ls-ctrola{ color: #e3077e; }
+.pop-setting .sbar-ls:hover{ position: relative; z-index: 3; }
+.pop-setting .sbar-ls:hover .sbar-ls-hr{ background: #e3077e; }
+.pop-setting .sbar-ls:hover .sbar-ls-ctrol{ color: #fff; }
+.pop-setting .sbar-ls:hover .sbar-tip{ background-position: left bottom; }
+.pop-setting .sbar-ls:hover .xxxx{}
+.pop-setting .sbar-ls:nth-last-child(1) .sbar-ls-move{ display: none; }
+.pop-setting .sbar-bg-te{ position: absolute; top: -4px; height: 12px; width: 12px; border-radius: 50%; background: #e5d8df; font-weight: bold; }
+.pop-setting .sbar-bg-tel{ left: 0; }
+.pop-setting .sbar-bg-ter{right: 0;}
+.pop-setting .sbar-bg-po{ position: absolute; top: -8px; height: 20px; width: 3px; background: #e5d8df; }
+.pop-setting .sbar-bg-pol{left: 38px;}
+.pop-setting .sbar-bg-por{right: 38px;}
+.pop-setting .sbar-bg-tein{ position: absolute; left: 50%; top: 20px; width: 20px; text-align: center; margin-left: -10px; }
+.pop-setting .sbar-bg-po .sbar-bg-tein{top: 25px; font-weight: bold;}
+.pop-setting .sbar-ls-to{position: absolute; left: 50%; top: 35px; z-index: 1; width: 100px; line-height: 14px; text-align: center; margin-left: -50px; font-weight: bold;}
+.pop-setting .sbar-ls-add{ display: none; position: absolute; left: 50%; top: 83px; z-index: 7; height: 20px; width: 20px; margin-left: -10px; background: url(../images/icon_add.png) no-repeat center center; }
+.pop-setting .sbar-ls:hover .sbar-ls-add{ display: block; }
+.pop-setting .btnbox{ padding: 50px 0; text-align: center; }
+.pop-setting .btn{ display: inline-block; margin:0 10px; height: 30px; line-height: 30px; font-size: 16px; color: #fff; font-weight: bold; width: 100px; border-radius: 4px; background: #cec9ca; }
+.pop-setting .btn:nth-child(1){ background: #e3077e; }
+.out-move-hide{ display: none; position: fixed; height: 0; overflow: hidden; top: 0; left: 0; height: 100%; width: 100%; z-index: 10; background: rgba(0,0,0,.1);}
+.pop-setting .xxxx{}
+.pop-setting .xxxx{}
+.pop-setting .xxxx{}
+.pop-setting .xxxx{}
 
