--- a/theme/assets/stylesheets/style.css
+++ b/theme/assets/stylesheets/style.css
@@ -257,3 +257,12 @@ textarea::-webkit-input-placeholder { color: #ccc;}
 .cm-swipe .swipe-pos{ position: absolute; z-index: 2; bottom: 10px; width: 100%; text-align: center;}
 .cm-swipe .swipe-po{ display: inline-block; margin: 0 3px; height: 8px; width:8px; border-radius: 4px; background: #fff; box-shadow: 0 0 3px rgba(0,0,0,.4); transition:all .3s; -webkit-transition:all .3s;}
 .cm-swipe .swipe-po-ac{ background: #58B586; width: 16px;}
+
+.cm-seeimgbox{ position: fixed; z-index: 10; height: 0; width: 100%; background: #000; left: 0; top: 0; overflow: hidden;}
+.cm-seeimgbox-active{ height: 100%;}
+.cm-seeimgbox .imgbox{ position: relative; height: 100%; width: 100%;}
+.cm-seeimgbox .siimg{position: absolute; left: 0; top: 0; height: 100%; width: 100%; background-size: contain; background-repeat: no-repeat; background-position: center center;}
+.cm-seeimgbox .sibox{ position: absolute; left: 0; top: 0; height: 100%; width: 100%; overflow: hidden;}
+.cm-seeimgbox .mbox{display: block; position: absolute; left: 0; top: 0; height: 100%; width: 100%;transform-origin:0 0; -webkit-transform-origin:0 0;}
+.cm-seeimgbox .botdo{ display: none; position: absolute; right: 10px; bottom:10px; background: rgba(100,100,100,.5); color: #fff;  border-radius: 2px; padding:0 8px; font-size: 12px; white-space: nowrap; line-height: 30px; z-index: 3;}
+.cm-seeimgbox .num{position: absolute; right: 0; top: 0; z-index: 5;background: rgba(100,100,100,.4); color: #eee; padding: 0 5px 0 12px; line-height: 24px; border-radius: 12px 0 0 12px;}
