--- a/theme/assets/stylesheets/style.css
+++ b/theme/assets/stylesheets/style.css
@@ -268,3 +268,15 @@ textarea::-webkit-input-placeholder { color: #ccc;}
 .cm-seeimgbox .botdo{ display: none; position: absolute; right: 10px; bottom:10px; background: rgba(100,100,100,.5); color: #fff;  border-radius: 2px; padding:0 8px; font-size: 12px; white-space: nowrap; line-height: 30px; z-index: 3;}
 .cm-seeimgbox .num{position: absolute; right: 0; top: 0; z-index: 5;background: rgba(100,100,100,.4); color: #eee; padding: 0 5px 0 12px; line-height: 24px; border-radius: 12px 0 0 12px;}
 .cm-seeimgbox .simgr{  position: absolute; left: 50%; top: 50%; max-width: 100%; max-height: 100%; transform: translate(-50%,-50%); -webkit-transform: translate(-50%,-50%);}
+
+.cm-clipimage{ position: fixed; left: 0; top: 0; height: 0; width: 100%; overflow: hidden; background: #000;}
+.cm-clipimage-ac{ height: 100%; opacity: 0;  -webkit-transform: scale(.7,.7); transform: scale(.7,.7); -webkit-transition: all .2s; transition: all .2s;}
+.cm-clipimage-show{opacity: 1;  -webkit-transform: scale(1,1); transform: scale(1,1);}
+.cm-clipimage .clipimage-img{ position: absolute; max-width: none;transform-origin:0 0; -webkit-transform-origin:0 0;}
+.cm-clipimage .clipimage-cover{ position: absolute; left: 0; top: 0; z-index: 3; height: 100%; width: 100%; border-width: 60px; border-color: rgba(0,0,0,0.7); border-style: solid; }
+.cm-clipimage .clipimage-btns{ position: absolute; left: 0; bottom: 0; z-index: 5; width: 100%; font-size: 14px; background: rgba(100,100,100,.5); overflow: hidden; }
+.cm-clipimage .clipimage-btn{ position: relative; display: block; float: left; width: 33%;border-right: 1px solid rgba(255,255,255,.2); line-height: 40px; color: #666; text-align: center; overflow: hidden; color: rgba(255,255,255,.6); }
+.cm-clipimage .clipimage-btn:nth-last-child(1){ border-right: none; width: 34%; }
+.cm-clipimage .clipimage-file{ position: absolute; right: 0; top: 0; height: 100%; width: 100%; opacity: 0; z-index: 2; }
+.cm-clipimage .clipimage-coverin{ position: absolute; left: 0; top: 0; height: 100%; width: 100%; box-shadow: 0 0 1px 1px rgba(255,255,255,.3); }
+.cm-clipimage .clipimage-touch{position: absolute; left: 0; top: 0; z-index: 4; height: 100%; width: 100%;}
