--- a/theme/assets/stylesheets/style.css
+++ b/theme/assets/stylesheets/style.css
@@ -209,7 +209,8 @@ textarea::-webkit-input-placeholder { color: #ccc;}
 .cm-topline .cm-tabbox .cmtab-in{ height: 48px;}
 .cm-topline .tl-input{ position: relative; z-index: 2; background-color: #fff; padding-top: 8px;}
 .cm-topline .tl-ctrol{ display: block; height: 32px; width: 100%; padding-left: 10px; border:none; background: #fff; outline: none; background: #eee; border-radius: 24px; color: #333;}
-.cm-topline-focus{ padding: 0 14px;} */
+.cm-topline-focus{ padding: 0 14px;} 
+.cm-topline-pr{ position: relative;}*/
 /* rem */
 .cm-topline{ position: fixed; left: 0; top: 0; height: .48rem; width: 100%; padding: 0 .48rem; background: #fff; line-height: .48rem; text-align: center; font-size: .16rem; border-bottom: 1px solid #eee; -webkit-transition: all .5s; transition: all .5s;}
 .cm-topline .tl-back{ position: absolute; left: 0; top: 0; width: .48rem; height: .48rem; z-index: 1;}
@@ -221,6 +222,7 @@ textarea::-webkit-input-placeholder { color: #ccc;}
 .cm-topline .tl-input{ position: relative; z-index: 2; background-color: #fff; padding-top: .08rem;}
 .cm-topline .tl-ctrol{ display: block; height: 32px; width: 100%; padding-left: .1rem; border:none; background: #fff; outline: none; background: #eee; border-radius: .24rem; color: #333;}
 .cm-topline-focus{ padding: 0 .14rem;}
+.cm-topline-pr{ position: relative;}
 
 
 .botmore{ padding: 10px 0; font-size: 12px; color: #999; text-align: center;}
@@ -280,3 +282,24 @@ textarea::-webkit-input-placeholder { color: #ccc;}
 .cm-clipimage .clipimage-file{ position: absolute; right: 0; top: 0; height: 100%; width: 100%; opacity: 0; z-index: 2; }
 .cm-clipimage .clipimage-coverin{ position: absolute; left: 0; top: 0; height: 100%; width: 100%; box-shadow: 0 0 1px 1px rgba(255,255,255,.3); }
 .cm-clipimage .clipimage-touch{position: absolute; left: 0; top: 0; z-index: 4; height: 100%; width: 100%;}
+
+
+.cm-sortbox{ background: #fff; border-bottom: 1px solid #eee; line-height: 40px; text-align: center; overflow: hidden; font-size: 14px;}
+.cm-sortbox .sortls{ background: #fff; display: block; float: left; color: #666; position: relative;}
+.cm-sortbox .sortls:after{ content: ""; display: block; height: 14px; width: 1px; background: #dfdfdf; position: absolute; right: 0; top: 50%; margin-top: -7px;}
+.cm-sortbox .sortls:nth-last-child(1):after{ display: none;}
+.cm-sortbox-two .sortls{ width: 50%;}
+.cm-sortbox-thr .sortls{ width: 33%;}
+.cm-sortbox-thr .sortls:nth-last-child(1){ width: 34%;}
+.cm-sortbox-for .sortls{ width: 25%;}
+.cm-sortbox-fiv .sortls{ width: 20%;}
+.cm-sortbox .sortls_active,.cm-sortbox .sortls_sortup,.cm-sortbox .sortls_sortdown{ color: #85dbd8;}
+.cm-sortbox .sortls_name{display: inline-block; vertical-align: middle; overflow: hidden; white-space: nowrap; text-overflow:ellipsis;}
+.cm-sortbox .arw-uds{ display: inline-block; vertical-align: middle; margin-left: 3px; position: relative; margin-top: -2px;}
+.cm-sortbox .arw-ud{ display: block; margin: 1px 0; height: 3px; width: 6px; position: relative; overflow: hidden; }
+.cm-sortbox .arw-ud:before{ content: ""; display: block; position: absolute; left: 0; height: 0; width: 0; border-width: 3px; border-color: transparent; border-style: solid;}
+.cm-sortbox .arw-up:before{bottom:0; border-bottom-color: #666;}
+.cm-sortbox .arw-down{ margin-top: 3px;}
+.cm-sortbox .arw-down:before{top:0; border-top-color: #666;}
+.cm-sortbox .sortls-sortup .arw-up:before{ border-bottom-color: #85dbd8;}
+.cm-sortbox .sortls-sortdown .arw-down:before{  border-top-color: #85dbd8;}
