--- a/easyweb/assets/css/base.css
+++ b/easyweb/assets/css/base.css
@@ -27,6 +27,26 @@ html,body{ height: 100%; }
 input::-webkit-input-placeholder { color: #ccc;}
 textarea::-webkit-input-placeholder { color: #ccc;}
 
-.pg-top{ position: fixed; left: 0; top: 0; height: 54px; background: #f8f9f9; width: 100%;}
+.pg-top{ position: fixed; left: 0; top: 0; z-index: 1; height: 54px; background: #f8f9f9; width: 100%;}
 .pg-top .left{ float: left; width: 400px; line-height: 54px; height: 54px; padding-left: 14px; font-size: 20px;}
 .pg-top .right{ float: right; padding-right: 14px;line-height: 54px; height: 54px;}
+
+.pg-right{}
+.pg-right .left{}
+.pg-right .xxx{}
+.pg-right .xxx{}
+.pg-right .xxx{}
+.pg-right .xxx{}
+.pg-right .xxx{}
+.pg-right .xxx{}
+.pg-right .xxx{}
+.pg-right .xxx{}
+.pg-right .xxx{}
+.pg-right .xxx{}
+.pg-right .xxx{}
+.pg-right .xxx{}
+.pg-right .xxx{}
+.pg-right .xxx{}
+.pg-right .xxx{}
+.pg-right .xxx{}
+.pg-right .xxx{}
